--- a/Splat/Splat-GtkSharp3.csproj
+++ b/Splat/Splat-GtkSharp3.csproj
@@ -15,8 +15,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\Gdk\</OutputPath>
-    <IntermediateOutputPath>obj\Debug\Gdk\</IntermediateOutputPath>
+    <OutputPath>bin\Debug\GtkSharp3\</OutputPath>
+    <IntermediateOutputPath>obj\Debug\GtkSharp3\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,8 +25,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\Gdk\</OutputPath>
-    <IntermediateOutputPath>obj\Release\Gdk\</IntermediateOutputPath>
+    <OutputPath>bin\Release\GtkSharp3\</OutputPath>
+    <IntermediateOutputPath>obj\Release\GtkSharp3\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
